# DL_final_term

./: .gitignore  README.md  REPORT_OUTLINE.md  environment.yml  pyproject.toml  requirements.txt
analyze/: FINDINGS.md  README.md  common.py  fig_chunking.py  fig_data_shift.py  fig_error_breakdown.py  fig_generalization.py  fig_policy_cases.py  fig_temporal.py  fig_training.py  run_all.py  run_evals.py
analyze/results/: chunking_findings.json  data_shift.json  error_breakdown.json  eval_summary.csv  eval_summary.json  eval_summary.md  generalization_findings.json  temporal_error.json
calvin_act/: __init__.py  __main__.py  act_config.py  act_model.py  calvin_data.py  cli.py  dataset.py  evaluate.py  lerobot_export.py  logger.py  metrics.py  normalize.py  temporal_ensemble.py  train.py
configs/: act_calvin.json  act_calvin_small.json
outputs/: analysis_task1_task2_extra.md  training_summary_all_runs.csv  training_summary_all_runs.md
outputs/task1_envA/: config.json  history.json  train_summary.json
outputs/task1_envA_40k/: config.json  history.json  train_summary.json
outputs/task2_envABC/: history.json  train_summary.json
outputs/task2_envABC_40k/: history.json  train_summary.json
outputs/task2_envABC_H20_40k/: config.json  history.json  train_summary.json
outputs/task2_envABC_H5_40k/: config.json  history.json  train_summary.json
outputs/task3_zeroshot_D/: eval_ABC_on_D.json  eval_A_on_D.json
