[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calvin-act"
version = "0.1.0"
description = "ACT cross-environment generalization on CALVIN (HW3 Task 2)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
    "tqdm>=4.60",
    "pandas>=1.5",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
logging = ["wandb>=0.16", "swanlab>=0.3"]      # experiment tracking (§4.1 curves)
plot = ["matplotlib>=3.5"]                      # convergence plots
lerobot = ["lerobot"]                           # official LeRobot ACT bridge
all = ["wandb>=0.16", "swanlab>=0.3", "matplotlib>=3.5"]

# NOTE: install the CUDA build of PyTorch from https://pytorch.org first for GPU
# training. The CALVIN PyBullet simulator (`calvin_env`) for closed-loop success
# rate is a separate install - see README.

[project.scripts]
calvin_act = "calvin_act.cli:main"

[tool.setuptools]
packages = ["calvin_act"]
